@@ -1,5 +1,4 @@
 Planned changes
-. accept multiple port arguments, and listen on all of them
 . make it easier to find out which child does what (SIGINFO?)
 . timeouts
 . don't send data to 'Send' connections -- they quit in this case
