@@ -1,4 +1,4 @@
-.\" $NiH: dccserver.mdoc,v 1.10 2003/04/07 10:26:31 wiz Exp $
+.\" $NiH: dccserver.mdoc,v 1.11 2003/04/07 13:16:41 wiz Exp $
 .\"
 .\" Copyright (c) 2002, 2003 Thomas Klausner.
 .\" All rights reserved.
@@ -28,7 +28,7 @@
 .\" OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT
 .\" OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
-.Dd April 5, 2003
+.Dd April 11, 2003
 .Dt DCCSERVER 1
 .Os
 .Sh NAME
@@ -76,7 +76,13 @@ Defaults to
 .It Fl p Ar port
 Listen for connections on port
 .Ar port .
-Defaults to 59, since that is MIRC's default port.
+You can specify this argument multiple times to listen on more than
+one port.
+If no
+.Fl p
+is given,
+.Nm
+will listen on port 59, since that is MIRC's default port.
 Please note that you have to have root privileges to bind to ports
 below 1024.
 See
@@ -109,10 +115,11 @@ to close all connections and exit the program.
 Text coming from the remote clients will be shown prepended by their
 nickname and child ID.
 .Sh EXAMPLES
-Typical usage:
+Listen on ports 59 and 37334 as user
+.Dq yournick :
 .Pp
 .Bd -literal -offset indent
-dccserver -n yournick -p 59
+dccserver -n yournick -p 59 -p 37334
 .Ed
 .Pp
 With
